// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Owner Password Credentials Grant generate a token with basic authorization 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant generate a token with basic authorization 2`] = `
Object {
  "access_token": Any<String>,
  "expires_in": 7200,
  "refresh_token": Any<String>,
  "token_type": "Bearer",
}
`;

exports[`Resource Owner Password Credentials Grant generate a token with basic authorization 3`] = `
Object {
  "accessToken": Any<String>,
  "accessTokenExpiresAt": Any<Date>,
  "client": Object {
    "createdAt": Any<Date>,
    "deletedAt": null,
    "id": "client-test-id",
    "secret": "client-test-secret",
    "updatedAt": Any<Date>,
  },
  "createdAt": Any<Date>,
  "deletedAt": null,
  "refreshToken": Any<String>,
  "refreshTokenExpiresAt": Any<Date>,
  "scopes": Array [
    Object {
      "alias": "read",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Read",
      "updatedAt": Any<Date>,
    },
    Object {
      "alias": "write",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Write",
      "updatedAt": Any<Date>,
    },
  ],
  "updatedAt": Any<Date>,
  "user": Object {
    "createdAt": Any<Date>,
    "deletedAt": null,
    "password": "user-test-password",
    "updatedAt": Any<Date>,
    "username": "user-test-username",
  },
}
`;

exports[`Resource Owner Password Credentials Grant generate a token with body autorization 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant generate a token with body autorization 2`] = `
Object {
  "access_token": Any<String>,
  "expires_in": 7200,
  "refresh_token": Any<String>,
  "token_type": "Bearer",
}
`;

exports[`Resource Owner Password Credentials Grant generate a token with body autorization 3`] = `
Object {
  "accessToken": Any<String>,
  "accessTokenExpiresAt": Any<Date>,
  "client": Object {
    "createdAt": Any<Date>,
    "deletedAt": null,
    "id": "client-test-id",
    "secret": "client-test-secret",
    "updatedAt": Any<Date>,
  },
  "createdAt": Any<Date>,
  "deletedAt": null,
  "refreshToken": Any<String>,
  "refreshTokenExpiresAt": Any<Date>,
  "scopes": Array [
    Object {
      "alias": "read",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Read",
      "updatedAt": Any<Date>,
    },
    Object {
      "alias": "write",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Write",
      "updatedAt": Any<Date>,
    },
  ],
  "updatedAt": Any<Date>,
  "user": Object {
    "createdAt": Any<Date>,
    "deletedAt": null,
    "password": "user-test-password",
    "updatedAt": Any<Date>,
    "username": "user-test-username",
  },
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property client_id = [9m"client-test-id"[29m in body 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property client_id = [9m"client-test-id"[29m in body 2`] = `
Object {
  "error": "invalid_request",
  "error_description": "The client id is missing",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property client_secret = [9m"client-test-secret"[29m in body 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property client_secret = [9m"client-test-secret"[29m in body 2`] = `
Object {
  "error": "invalid_request",
  "error_description": "The client secret is missing",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property grant_type = [9m"password"[29m in body 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property grant_type = [9m"password"[29m in body 2`] = `
Object {
  "error": "invalid_request",
  "error_description": "The grant type is missing",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property password = [9m"user-test-password"[29m in body 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property password = [9m"user-test-password"[29m in body 2`] = `
Object {
  "error": "invalid_request",
  "error_description": "The password is missing",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property scope = [9m"read+write"[29m in body 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property scope = [9m"read+write"[29m in body 2`] = `
Object {
  "error": "invalid_request",
  "error_description": "The scope is missing",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property username = [9m"user-test-username"[29m in body 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Resource Owner Password Credentials Grant response error for missing property username = [9m"user-test-username"[29m in body 2`] = `
Object {
  "error": "invalid_request",
  "error_description": "The username is missing",
}
`;
